// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`62/120 snapshots preserve stages, truncate Chinese titles, keep old terminals on t, expand results 1`] = `
"superagent 12:00:00 · 心跳 12s ✓ · 大看板
今日 达成 7/7 · 一次通过 0 · 人工介入 0 · 评审债 22
总 ▕███████████████████1 run · 47% 剩~12m░░░░░░░░░░░░░░░░░░░░▏
tok 今日 3  角色今日用量未知
━ 进行中 1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
▶ sinan 题目清单报告：补修订前版本和节分布排序 10m00s 未知
  M1/1 编✓ 验✓ 评R2◐ 门· 合· ▕█████47% 剩~12m░░░░░▏ 军师·astra
━ 今日结果 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
… 另 2 条（a 展开）
终端 1：执行中 0 · 等待输入 0 · 空闲 0 · 未确认 1（t 展开）
⏎详情 t终端 a全部 w大看板 q退出"
`;

exports[`62/120 snapshots preserve stages, truncate Chinese titles, keep old terminals on t, expand results 2`] = `
"superagent 12:00:00 · 心跳 12s ✓ · 大看板
今日 达成 7/7 · 一次通过 0 · 人工介入 0 · 评审债 22
总 ▕█████1 run · 47% 剩~12m░░░░░▏
tok 今日 3  角色今日用量未知
━ 进行中 1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
▶ sinan 题目清单报告：补修订前版本和节分布排序 10m00s R2 未知 active
  M1/1 编✓ 验✓ 评R2◐ 门· 合· ▕█████████47% 剩~12m░░░░░░░░░▏ 军师·astra
━ 今日结果 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
✓ sinan 题目清单报告：补修订前版本和节分布排序 9m00s R2 未知
… 另 2 条（a 展开）
终端 1：执行中 0 · 等待输入 0 · 空闲 0 · 未确认 1（t 展开）
⏎详情 t终端 a全部 w大看板 q退出"
`;
